[package]
name = "random-string"
version = "0.2.1"
authors = ["FssAy <49795742+DmitrijVC@users.noreply.github.com>", "Skarlett@github.com"]
edition = "2018"
license = "GPL-3.0-only"
description = "Allows to generate random strings based on a given charset and length."
# documentation = "-"
repository = "https://github.com/DmitrijVC/random-string"
readme = "README.md"

[dependencies]
fastrand = "1.4"

[profile.release]
opt-level = 3
